<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">Virtual Guitarist</string>
    <string name="home_header">VIRTUAL GUITARIST</string>
    <string name="Metronome">Metronome</string>
    <string name="play_guitar">Play Guitar</string>
    <string name="setting"> Setting</string>
    <string name="information"> How to Use</string>
    <string name="songList"> Song With Strumming</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="signature">SIGNATURE</string>
    <string name="tempo">TEMPO</string>
    <string name="bpm">BPM</string>
    <string name="strumming_pattern">STRUMMING</string>
    <string name="chords">CHORDS</string>
    <string name="developerInfo">Developers Info</string>


    <string-array name="playGuitar_Signature">
        <item>1 / 1</item>
        <item>2 / 2</item>
        <item>3 / 3</item>
        <item>3 / 4</item>
        <item>4 / 4</item>
        <item>6 / 4</item>
    </string-array>

    <string-array name="playGuitar_strumming_1_1">

        <item>One Bye One-1</item>
        <item>One Bye One-2</item>
        <!--<item>One Bye One-3</item>-->
        <!--<item>One Bye One-4</item>-->
        <!--<item>One Bye One-5</item>-->

    </string-array>

    <string-array name="playGuitar_strumming_2_2">

        <item>Two Bye Two-1</item>
        <!--<item>Two Bye Two-2</item>-->
        <!--<item>Two Bye Two-3</item>-->
        <!--<item>Two Bye Two-4</item>-->
        <!--<item>Two Bye Two-5</item>-->

    </string-array>


    <string-array name="playGuitar_strumming_3_3">

        <item>Three bye Three-1</item>
        <item>Three bye Three-2</item>
        <!--<item>Three bye Three-3</item>-->
        <!--<item>Three bye Three-4</item>-->
        <!--<item>Three bye Three-5</item>-->

    </string-array>

    <string-array name="playGuitar_strumming_3_4">

        <item>Three bye four-1</item>
        <item>Three bye four-2</item>
        <!--<item>Three bye four-3</item>-->
        <!--<item>Three bye four-4</item>-->
        <!--<item>Three bye four-5</item>-->

    </string-array>

    <string-array name="playGuitar_strumming_4_4">

        <item>Four bye four-1</item>
        <item>Four bye four-2</item>
        <item>Four bye four-3</item>
        <item>Four bye four-4</item>
        <item>Four bye four-5</item>
        <item>Four bye four-6</item>

    </string-array>

    <string-array name="playGuitar_strumming_6_8">

        <item>Six bye Four-1</item>
        <item>Six bye Four-2</item>
        <item>Six bye Four-3</item>

    </string-array>


    <string-array name="playGuitar_Chord_Name">

        <item>A</item>
        <item>A#</item>
        <item>B</item>
        <item>C</item>
        <item>C#</item>
        <item>D</item>
        <item>D#</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>G</item>
        <item>G#</item>


    </string-array>

    <string-array name="playGuitar_Chord_Type">

        <item>Major</item>
        <item>Minor</item>
        <item>Sus2</item>
        <item>Sus4</item>

    </string-array>


    <string-array name="playGuitar_Number_Of_Chord_1_1">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>

    </string-array>

    <string-array name="playGuitar_Number_Of_Chord_2_2">

        <item>1</item>
        <item>2</item>
        <item>4</item>

    </string-array>


    <string-array name="playGuitar_Number_Of_Chord_3_3">

        <item>1</item>
        <item>3</item>

    </string-array>

    <string-array name="playGuitar_Number_Of_Chord_3_4">

        <item>1</item>
        <item>2</item>
        <item>4</item>

    </string-array>

    <string-array name="playGuitar_Number_Of_Chord_4_4">

        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>

    </string-array>

    <string-array name="playGuitar_Number_Of_Chord_6_8">

        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>

    </string-array>


    <string name="using_play_guitar">

        <![CDATA[

        <p>i. Select your Tempo.</p>
<p>ii. Select Your Song Signature. <br>Ex: press "4/4"</p>
<p>iii. Select any Strumming and try to sing. Or you can go “navigation drawer” of our apps and select “Song List With Strumming”</p>
<p>iv. Select "Chord" and choose “Number Of chord” than Customize your chord :)</p>
<p>You are Almost Done, enjoy!!!</p>

        ]]>
    </string>

    <string name="chord_guide">
        <![CDATA[
        <p>i)	A Major, F# Minor, D Major, E Major</p>
<p>ii)	C Major, A Minor, F Major, G Major</p>
<p>iii)	D Major, B Minor, G Major, A Major</p>
<p>iv)	G Major, E Minor, C Major, D Major</p>
        ]]>
    </string>

    <string name="details_using_info">

        <![CDATA[

<p><b><u>Tempo:</u></b></p>
<p>Tempo is originally use to describe the timing of music, or the speed at which a piece of music is played. Usually tempo expressed in Beats Per Minute (BPM). For example, 60 BPM mean 60 beat will be played in one minute. Other ways we can understand 60 bpm produce Slower sound than 80 bpm.</p>
<p>You can change Tempo Any Time. To change tempo use “+” and “-” Button or you can change By clicking on Tempo Box.</p>
<p><b>Signature Pattern:</b></p>
<p>A true understanding of time signatures is crucial towards a correct use of the metronome.
 signature consist of two numbers:</p>
<p>- the upper number indicates how many beats there are in a measure.</p>
<p>- the lower number indicates the note value which represents one beat.</p>

<p>- 2/2 signature means ,2 half notes per measure.</p>
<p>- 3/4 signature means ,3 quarter notes per measure.</p>
<p>- 4/4 signature means ,4 quarter notes per measure.</p>
<p>- 6/4 signature means ,2 dotted half notes per measure.</p>
<p>Mostly General song played in 4/4 and 3/4 strumming pattern.</p>
<p><b>Strumming:</b></p>
<p>A strumming pattern or strum is a preset pattern used by a rhythm guitar.</p>
<p>Strumming pattern shows how many sound use in a signature and where to use them. If you do not understand strumming pattern than Select Signature 4 / 4 and select given first strumming and try to sing. Or you can go “navigation drawer” of our apps and select “Song List With Strumming”  to get strumming Idea for your song. Or You can watch our demo video to understand that :)</p>
<p><b>Chords:</b></p>
<p>A chord is a number of musical notes played or sung at the same time with a pleasing effect. There are many (more than billion) chords discovered before. We have four Type’s of chords in our app. Those are Major, Minor, Sus2, Sus4. So you can choose any chord with any type of that.</p>
<p>Select “Number Of chord” what number of chord you want to use in your song. Give the chord of your scale to sing any song. If you want to change your scale you have to change chord. you can use basic chord group to get a meaningful sound.</p>
<p>Here are Four Different group of 4 chord pattern given to help you.\nYou can use any group from there or any chord you want to use.</p>
<p>i)	A Major, F# Minor, D Major, E Major</p>
<p>ii)	C Major, A Minor, F Major, G Major</p>
<p>iii)	D Major, B Minor, G Major, A Major</p>
<p>iv)	G Major, E Minor, C Major, D Major</p>

<p><b>Our Apps Speacial Feature:</b></p>
	<p>i)	you can change your volume using your phone volume button.</p>
	<p>ii)	You can go “Back” using your phone back button.</p>
	<p>iii)	You can go anywhere using “Our navigation drawer”</p>
	<p>iv)	Tune Your guitar with listing sound from apps Home Display by touching string.</p>
	<p>v)	 Use Metronome and Be a pro guitarist with our apps.</p>



        ]]>

    </string>


</resources>