<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_play_guitar_DrawarLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pdspe.virtualguitarist.playGuitar"
    android:background="@drawable/allpagebackgrund">



    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/allpagebackgrund">
            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="260dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/boxshadow">

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tempo_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tempo"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="25dp"
                        android:textStyle="bold"

                        />

                    <Button
                        android:id="@+id/tempo_button"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="70dp"
                        android:text="120"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/white"
                        android:background="@drawable/homebutton"
                        android:textSize="50sp"
                        android:textStyle="bold"
                         />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/bpm"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/signature_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signature"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"

                        />
                    <LinearLayout
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="62dp"
                        android:layout_marginTop="7dp"
                        android:paddingLeft="5dp"

                        android:orientation="horizontal"
                        android:background="@drawable/homebutton">

                        <Spinner
                            android:id="@+id/signature_spinner"

                            android:backgroundTint="#00b10b09"
                            android:textDirection="firstStrong"
                            android:layout_margin="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            style="@style/Signature_spinner_style"
                            />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strumming_pattern"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"

                        />
                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="7dp"
                        android:paddingLeft="5dp"

                        android:orientation="horizontal"
                        android:background="@drawable/homebutton">

                        <Spinner
                            android:id="@+id/srumming_spinner"

                            android:backgroundTint="#00b10b09"
                            android:layout_margin="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:spinnerMode="dropdown"
                            style="@style/Strumming_spinner_style"
                            />

                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/chords"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chords"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"

                        />

                    <Button
                        android:id="@+id/setup_usable_chord"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginTop="7dp"
                        android:text="EDIT"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:background="@drawable/homebutton"

                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/boxshadow"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/homebutton" >
                    <LinearLayout
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:background="@drawable/circle"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="55dp"
                        >

                        <ImageButton
                            android:id="@+id/media_button"
                            android:layout_width="95dp"
                            android:layout_height="95dp"
                            android:src="@drawable/play_btn"
                            android:paddingLeft="30dp"
                            android:paddingTop="30dp"
                            android:paddingBottom="30dp"
                            android:paddingRight="26dp"
                            android:scaleType="fitXY"

                            android:layout_marginLeft="18dp"
                            android:layout_marginTop="18dp"

                            android:background="@drawable/circle_inner"
                            />
                    </LinearLayout>



                </LinearLayout>


            </LinearLayout>

            <LinearLayout

                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/boxshadow"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/show_chords"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="#fff"

                    android:text=""
                    />

            </LinearLayout>


        </LinearLayout>
    </FrameLayout>


    <!-- The navigation drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nevigation_menu"
        app:headerLayout="@layout/nevigation_header"
        android:background="@drawable/allpagebackgrund"/>






</android.support.v4.widget.DrawerLayout>