<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_metronome_drawarLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allpagebackgrund"

    tools:context="com.example.pdspe.virtualguitarist.Metronome">


    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/allpagebackgrund" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!-- metronome value assigning-->
            <LinearLayout
                android:id="@+id/input_layout"
                android:layout_gravity="center_horizontal"
                android:layout_width="350dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:background="@drawable/boxshadow">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" >

                    <TextView
                        android:id="@+id/signature_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signature"
                        android:textColor="@color/white"
                        android:paddingTop="15dp"
                        android:textIsSelectable="false"
                        android:textSize="25sp"
                        android:textStyle="bold"

                        />

                    <LinearLayout
                        android:id="@+id/input_signature"
                        android:layout_width="130dp"
                        android:layout_height="65dp"
                        android:layout_marginLeft="60dp"
                        android:paddingLeft="5dp"

                        android:orientation="horizontal"
                        android:background="@drawable/homebutton">

                        <TextView
                            android:id="@+id/beat_pattern1"
                            android:layout_width="45dp"
                            android:layout_height="60dp"
                            android:textAlignment="center"
                            android:text="4"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            android:padding="5dp" />

                        <TextView
                            android:layout_width="23dp"
                            android:layout_height="60dp"
                            android:text="/"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="40sp"
                            android:textStyle="bold"
                            android:paddingTop="5dp"

                            />

                        <TextView
                            android:id="@+id/beat_pattern2"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:text="4"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            android:padding="5dp"

                            />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"

                    >

                    <TextView
                        android:id="@+id/tempo_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tempo"
                        android:textColor="@color/white"
                        android:paddingTop="35dp"
                        android:textIsSelectable="false"
                        android:textSize="25sp"
                        android:textStyle="bold"

                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="50dp" >

                        <Button
                            android:id="@+id/tempo_input_value"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="120"
                            android:textColor="@color/white"
                            android:textSize="45sp"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:background="@drawable/homebutton"

                            />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/bpm"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- Metronome Play and poss option -->
            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/boxshadow">

                <ImageButton
                    android:id="@+id/negative_buttton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/minus"

                    android:background="@drawable/homebutton"
                    />
                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:background="@drawable/circle"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp">

                    <ImageButton
                        android:id="@+id/media_button"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:src="@drawable/play_btn"
                        android:scaleType="fitXY"
                        android:paddingLeft="30dp"
                        android:paddingTop="30dp"
                        android:paddingBottom="30dp"
                        android:paddingRight="26dp"

                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="18dp"

                        android:background="@drawable/circle_inner"
                        />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/positive_button"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/add"
                    android:background="@drawable/homebutton"
                    />

            </LinearLayout>

            <!--last option-->
            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/boxshadow">

                <LinearLayout
                    android:id="@+id/metronome_play_Style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/boxshadow"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/setColorBeatPatturn1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="75dp" >
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/setColorBeatPatturn2"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="70dp">
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>



        </LinearLayout>
    </FrameLayout>
    <!-- The navigation drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nevigation_menu"
        app:headerLayout="@layout/nevigation_header"
        android:background="@drawable/allpagebackgrund"/>






</android.support.v4.widget.DrawerLayout>
